--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ sizingMethod='scale');*/
 	/*opacity:0.2;*/
 	/*height: 300px;*/
 	color: white;
-	background-color:#1f1f1f;
+	background-color:#2f2f2f;
 	background-color:rgba(0,0,0,0.6);
 	/*background-color: rgba(255, 255, 255, 0.6);*/
 	/*color: #6b6b64;*/
@@ -128,6 +128,7 @@ sizingMethod='scale');*/
 	font-size: 10pt;
 	overflow: hidden;
 	padding: 25px;
+	cursor: pointer;
 }
 /*
 #ProjectsContents {
